# forge-app

./: .dockerignore  .env.example  .gitattributes  .gitignore  .ruff.toml  README.md  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  railway.worker.json  tsconfig.base.json
apps/api/: .dockerignore  Dockerfile  openapi.json  pyproject.toml  railway.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2a517e73c899_initial_schema.py  aa03_canvas_projects.py  aal02_plan_billing_normalize.py  aal03_credit_ledger_stripe_meter.py  auth01_custom_auth.py  auth02_email_verification.py  auth03_launch_access_hardening.py  b7c8d9e0f1a2_bi01_org_rls_audit_functions_roles.py  bp02_feedback_memory_learning.py  bp04_plan_rec_refunds.py  c4f8a1b92e3d_mission02_rls_force_soft_delete_forge_role.py  c9d0e1f2a3b4_mission09_template_slug.py  d5e6f7a8b9c0_user_preferences_jsonb.py  e1a2b3c4d5e7_mission05_automation_result_calendar_error.py  f1e2d3c4b5a6_mission06_analytics_billing.py  g101_gl01_engagement_analytics.py  gl02_platform_rbac.py  m8a1b2c3d4e5_custom_domains_caddy.py  merge_bp02_aal03.py  n2b3i404_settings_config_bi04.py  n2b3i405_api_token_rls_lookup.py  o02_orchestration_runs.py  o04_page_review_quality.py  p04_forge_credits_ledger_v2.py  p05_canvas_orchestration_v2.py  p06_page_type_check.py  p06b_analytics_workflow_events.py  p07_analytics_export_events.py  p08_design_memory_bp01.py  w01_contact_calendar_availability.py  w01b_submission_booking_columns.py  w02_contractor_proposals.py  w03_bi01_pg_partman.py  w03_pitch_decks.py
apps/api/app/: config.py  main.py  seed_templates_data.py
apps/api/app/api/: caddy_internal.py  mcp_v1.py  public_api.py  public_proposal.py
apps/api/app/core/: __init__.py  context.py  errors.py  exception_handlers.py  features.py  health_checks.py  ip.py  logging.py  sentry.py  (+2 more)
apps/api/scripts/: dump_openapi_paths.py  export_openapi.py  seed_auth_test_users.py  seed_dev.py  seed_templates.py
apps/api/tests/: README.md  __init__.py  conftest.py  test_api_contracts.py  test_audit_log_completeness.py  test_auth_bi03.py  test_auth_billing_journey.py  test_auth_middleware.py  test_bi02_middleware_tenant.py  test_bi04_api_scopes_and_alias.py  test_billing_webhook.py  test_bp01_judge_rules.py  test_bp02_feedback_api.py  test_caddy_internal.py  test_component_tree_diff.py  test_config_production.py  test_config_validation.py  test_context_explain_memory.py  test_custom_auth.py  test_e2e_bootstrap.py  test_error_handling.py  test_forge_credits_balance.py  test_gl01_analytics_registry.py  test_gl01_funnel_compute.py  test_gl02_platform_rbac.py  test_health.py  test_health_checks_auth.py  test_llm_router.py  test_metrics_gate.py  test_middleware_chain.py  test_migrations.py  test_mission06_analytics_billing.py  test_o01_context_budget.py  test_o01_urls.py  test_o02_graph.py  test_o02_planners.py  test_o03_catalog.py  test_o03_proposal_math.py  test_o03_render.py  test_o03_safety.py  (+41 more)
(+1119 files in other folders)
