[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "redis>=5.3.1",
    "resend>=2.29.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "stripe>=15.0.1",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx-sse>=0.4.3",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "types-redis>=4.6.0.20241004",
]
